--- a/_scss/components/_nav.scss
+++ b/_scss/components/_nav.scss
@@ -32,7 +32,7 @@
       width: 0%;
       height: 1px; 
       transition: all 300ms ease;
-      background: rgba(white, 0.3);
+      background: $green;
     }
   }
 }
